<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trip_planner"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_trip_planner" />
        <item
            android:id="@+id/nav_budget_summary"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_budget_summary" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_logout" />
</menu>